correct wrong numbers of columns on small screens

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -346,7 +346,7 @@ hr {
 @media (max-width: $screen-breakpoint) {
   .grid-container {
     grid-template-columns: auto;
-    grid-template-rows: repeat(8, 300px);
+    grid-template-rows: repeat(6, 300px);
   }
 
   .grid-main-item {
